Pretty docs make people happy

--- a/theme-supplemental/partials/header-content.hbs
+++ b/theme-supplemental/partials/header-content.hbs
@@ -13,6 +13,11 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
+	  	<span class = "navbar-item" style = "font-size: small;">
+			<strong style = "color: #ef9f76;">Note: </strong>
+			&nbsp;
+			<a style = "color: #85c1dc; " href = "https://docs.olivetin.app">docs.olivetin.app</a>&nbsp; is the official docs for now. This site is a work in progress.
+		</span>
         <a class="navbar-item" href="https://www.olivetin.app/">Home</a>
         <div class="navbar-item search hide-for-print">
           <div id="search-field" class="field">
